--- a/style.css
+++ b/style.css
@@ -101,15 +101,16 @@ button { grid-column: 1 / -1; justify-self: center; padding: 0.6em 1.2em; }
   position: absolute;
   top: 1rem;
   right: 1rem;
-  font-size: 0.8em;
+  font-size: 88%;
   z-index: 1000;
 }
 
-select, input, textarea, button { 
-  font: inherit; 
+.color-scheme select {
+  font-family: inherit;
+  font-size: inherit;
 }
 
-
+/* Dark theme support */
 @media (min-width: 700px) {
   body { padding-block: 2rem; }
 }
