--- a/style.css
+++ b/style.css
@@ -101,16 +101,13 @@ button { grid-column: 1 / -1; justify-self: center; padding: 0.6em 1.2em; }
   position: absolute;
   top: 1rem;
   right: 1rem;
-  font-size: 88%;
+  font-size: 0.8em;
   z-index: 1000;
 }
 
-.color-scheme select {
-  font-family: inherit;
-  font-size: inherit;
+select, input, textarea, button { 
+  font: inherit; 
 }
-
-/* Dark theme support */
 @media (min-width: 700px) {
   body { padding-block: 2rem; }
 }
